--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.16"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "jest": "^28.0.3"
+    "jest": "^28.0.3",
+    "nodemon": "^2.0.16"
   }
 }
